--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "firebase": "^12.3.0",
+    "jquery": "^3.7.1",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
   },
